# pike

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  linux-arm-experiments.yml  release.yml
config/: server.toml
crates/pike/: Cargo.toml
crates/pike-core/: Cargo.toml
crates/pike-core/examples/: quiche_smoke.rs  spike_echo.rs
crates/pike-core/src/: lib.rs
crates/pike-core/src/proto/: framing.rs  heartbeat.rs  messages.rs  mod.rs
crates/pike-core/src/quic/: client.rs  config.rs  mod.rs  server.rs  spike_echo_client.rs  spike_echo_server.rs  stream_manager.rs
crates/pike-core/src/types/: mod.rs
crates/pike-server/: Cargo.toml
crates/pike-server/src/: abuse.rs  admin.rs  auth.rs  config.rs  connection.rs  control_plane.rs  dashboard_ws.rs  http.rs  ingest.rs  lib.rs  main.rs  management.rs  metrics.rs  proxy.rs  rate_limit.rs  registry.rs  request_log.rs  router.rs  state_store.rs  tcp.rs  transport.rs  tunnel_metrics.rs  usage_reporter.rs  websocket.rs  ws_proxy.rs
crates/pike-server/tests/: host_aware_routing.rs  usage_reporter.rs  validate_api_key.rs
crates/pike/src/: config.rs  connection.rs  diagnostics.rs  main.rs  session.rs  ws_probe.rs
crates/pike/src/inspector/: mod.rs  server.rs  storage.rs
crates/pike/src/tunnel/: http.rs  mod.rs  tcp.rs
crates/pike/tests/: registration_channel.rs
deploy/: README.md  client-config.toml.template  pike-server.service  server-vps.toml  setup.sh  start.sh
scripts/: install.sh  local_tunnel_smoke.py  telephony_media_harness.md  telephony_media_harness.mjs
