[workspace]
resolver = "2"
members = [
    "crates/pike-core",
    "crates/pike-server",
    "crates/pike",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/a3therion/pike"
homepage = "https://pike.dev"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
dashmap = "6"

# QUIC (Cloudflare) — pin exact versions, verify API compatibility
quiche = "0.24"
tokio-quiche = "0.14"

# HTTP server + routing
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# TLS
rustls = "0.23"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
postcard = { version = "1", features = ["alloc"] }

# Networking
tokio-tungstenite = "0.28"

# Streaming
async-stream = "0.3"
futures = "0.3"

# Rate limiting
governor = "0.7"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
