[package]
name = "pike-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
dashmap = { workspace = true }
quiche = { workspace = true }
tokio-quiche = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
