[package]
name = "pike-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pike-core = { path = "../pike-core" }
tokio = { workspace = true }
quiche = { workspace = true }
tokio-quiche = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["auth", "limit"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
governor = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
redis = "0.27"
deadpool-redis = "0.18"
toml = { workspace = true }
uuid = { workspace = true }
postcard = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
lazy_static = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
futures-util = "0.3"
http-body-util = "0.1"


[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
