[package]
name = "pike"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pike-core = { path = "../pike-core" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
notify = "6"
colored = "2"
indicatif = "0.17"
dirs = "5"
rand = "0.8"
axum = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-quiche = { workspace = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
